name:                weighted
version:             0.2.0.0
synopsis:            Writer monad which uses semiring constraint
description:         Writer monad which uses semiring constraint
homepage:            https://github.com/oisdk/weighted
license:             MIT
license-file:        LICENSE
author:              Donnacha Oisín Kidney
maintainer:          mail@doisinkidney.com
copyright:           2016 Donnacha Oisín Kidney
category:            Control
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Weighted
  build-depends:       base >= 4.9 && < 5
                     , semiring-num >= 0.9
                     , mtl >= 2.2
                     , transformers >= 0.5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/oisdk/weighted
